--- a/src/pages/favorites/styles.scss
+++ b/src/pages/favorites/styles.scss
@@ -1,6 +1,14 @@
 .without-favorites-image {
   text-align-last: center;
   img {
-    width: 20%;
+    width: 30%;
+    margin-top: 30px;
+
+    @media screen and (max-width: 900px) {
+      width: 50%;
+    }
+    @media screen and (max-width: 600px) {
+      width: 75%;
+    }
   }
 }
