--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+img {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
