--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #9dcfd4;
 }
 
 @keyframes App-logo-spin {
@@ -43,4 +43,14 @@ img {
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+}
+
+::-moz-selection {
+  color: white;
+  background: #9dcfd4;
+}
+
+::selection {
+  color: white;
+  background: #9dcfd4;
 }
