--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,14 @@ img {
   -ms-user-select: none;
 }
 
+svg {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 ::-moz-selection {
   color: white;
   background: #9dcfd4;
