underline en menu active

--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -1,7 +1,4 @@
-.menu {
-  button {
-    .active {
-      background-color: red !important;
-    }
-  }
+.clicked {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
