--- a/src/App.scss
+++ b/src/App.scss
@@ -46,13 +46,21 @@ img {
 }
 
 svg {
-  user-select: none;
+  user-select: none !important;
   -moz-user-select: none;
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
-
+path {
+  user-select: none !important;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
 ::-moz-selection {
   color: white;
   background: #9dcfd4;
