--- a/src/components/CocktailDetails/style.scss
+++ b/src/components/CocktailDetails/style.scss
@@ -126,6 +126,10 @@
     position: absolute;
     left: 80%;
     top: 6%;
+    :focus {
+      box-shadow: none;
+      outline: none;
+    }
   }
 
   @media screen and (min-width: 700px) and (max-width: 900px) {
