--- a/public/styles.css
+++ b/public/styles.css
@@ -90,7 +90,7 @@ body {
 
 .notfound a:hover {
   color: #fff;
-  background-color: #00b5c3;
+  background-color: #9dcfd4;
 }
 
 @media only screen and (max-width: 480px) {
