--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,11 @@ img {
 }
 
 button {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
   -webkit-tap-highlight-color: transparent;
 }
 svg {
